# tree-analyzer-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/: server.py
src/analysis/: duplicate_detector.py  name_disambiguation.py  relationship_checker.py  source_coverage.py  timeline_validator.py
src/db/: connection.py  queries.py
src/reports/: generator.py  links.py
src/reports/templates/: full_audit.md.j2  name_clusters.md.j2  person_profile.md.j2  research_leads.md.j2
src/tools/: analysis_tools.py  report_tools.py
tests/: test_analysis_tools.py  test_db_connection.py  test_db_queries.py  test_duplicate_detector.py  test_links.py  test_name_disambiguation.py  test_report_tools.py  test_source_coverage.py  test_timeline_validator.py
